--- a/app/views/registration/startResetPassword.scala.html
+++ b/app/views/registration/startResetPassword.scala.html
@@ -31,6 +31,7 @@
   <div class="container login-page">
     <div class="login-wrapper">
       <form action="@securesocial.controllers.routes.PasswordReset.handleStartResetPassword().absoluteURL(IdentityProvider.sslEnabled)" class="form-horizontal" autocomplete="off" method="post" >
+        @CSRF.formField(play.filters.csrf.CSRF.Token.getToken(request))
         <legend> Provide a valid email address </legend>
           @request.flash.get("error").map { msg =>
           <div class="alert alert-danger">
